--- a/DCDD614D8.opf/index.yml
+++ b/DCDD614D8.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   f33921305ad74d66ad580f2a46636253:
     parts: {}
+    work_id: D4161
     span:
-    - vol: 96
+    - base: ff47
       start: 1
       end: 2975
-    work_id: D4161
